--- a/packages/jukboks-frontend/package.json
+++ b/packages/jukboks-frontend/package.json
@@ -1,5 +1,23 @@
 {
   "name": "@kekasquad/jukboks-frontend",
   "version": "1.0.0",
-  "license": "MIT"
+  "devDependencies": {
+    "@tsconfig/svelte": "^1.0.10",
+    "cross-env": "^7.0.3",
+    "css-loader": "^5.0.2",
+    "mini-css-extract-plugin": "^1.3.8",
+    "svelte": "^3.32.3",
+    "svelte-check": "^1.1.35",
+    "svelte-loader": "^3.0.0",
+    "svelte-preprocess": "^4.6.9",
+    "ts-loader": "^8.0.17",
+    "typescript": "^4.1.5",
+    "webpack": "^5.23.0",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2"
+  },
+  "scripts": {
+    "build": "cross-env NODE_ENV=production webpack",
+    "dev": "webpack serve --content-base public"
+  }
 }
