--- a/packages/jukboks-frontend/package.json
+++ b/packages/jukboks-frontend/package.json
@@ -6,6 +6,8 @@
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.2",
     "mini-css-extract-plugin": "^1.3.8",
+    "prettier": "2.2.1",
+    "prettier-plugin-svelte": "^2.1.6",
     "svelte": "^3.32.3",
     "svelte-check": "^1.1.35",
     "svelte-loader": "^3.0.0",
