--- a/packages/jukboks-backend/package.json
+++ b/packages/jukboks-backend/package.json
@@ -1,5 +1,14 @@
 {
   "name": "@kekasquad/jukboks-backend",
   "version": "1.0.0",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "dev": "ts-node-dev --respawn src/index.ts"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.31",
+    "prettier": "^2.2.1",
+    "ts-node-dev": "^1.1.1",
+    "typescript": "^4.1.5"
+  }
 }
