--- a/packages/jukboks-backend/package.json
+++ b/packages/jukboks-backend/package.json
@@ -6,9 +6,14 @@
     "dev": "ts-node-dev --respawn src/index.ts"
   },
   "devDependencies": {
+    "@types/express": "^4.17.11",
     "@types/node": "^14.14.31",
     "prettier": "^2.2.1",
     "ts-node-dev": "^1.1.1",
+    "tslint": "^6.1.3",
     "typescript": "^4.1.5"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
