--- a/packages/jukboks-backend/package.json
+++ b/packages/jukboks-backend/package.json
@@ -8,9 +8,13 @@
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.31",
+    "@typescript-eslint/eslint-plugin": "^4.15.2",
+    "@typescript-eslint/parser": "^4.15.2",
+    "eslint": "^7.20.0",
+    "eslint-config-prettier": "^8.0.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "prettier": "^2.2.1",
     "ts-node-dev": "^1.1.1",
-    "tslint": "^6.1.3",
     "typescript": "^4.1.5"
   },
   "dependencies": {
