--- a/packages/jukboks-backend/package.json
+++ b/packages/jukboks-backend/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@kekasquad/jukboks-backend",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --respawn src/index.ts"
+    "dev": "ts-node-dev --respawn src/app.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
@@ -18,6 +18,7 @@
     "typescript": "^4.1.5"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-openapi-validator": "^4.11.0"
   }
 }
