--- a/packages/jukboks-backend/package.json
+++ b/packages/jukboks-backend/package.json
@@ -3,19 +3,14 @@
   "version": "0.0.1",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --respawn src/app.ts"
+    "dev": "nodemon src/app.js"
   },
   "devDependencies": {
-    "@types/express": "^4.17.11",
-    "@types/node": "^14.14.31",
-    "@typescript-eslint/eslint-plugin": "^4.15.2",
-    "@typescript-eslint/parser": "^4.15.2",
     "eslint": "^7.20.0",
     "eslint-config-prettier": "^8.0.0",
     "eslint-plugin-prettier": "^3.3.1",
-    "prettier": "^2.2.1",
-    "ts-node-dev": "^1.1.1",
-    "typescript": "^4.1.5"
+    "nodemon": "^2.0.7",
+    "prettier": "^2.2.1"
   },
   "dependencies": {
     "express": "^4.17.1",
