--- a/packages/jukboks-backend/package.json
+++ b/packages/jukboks-backend/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "express-openapi-validator": "^4.11.0"
+    "express-openapi-validator": "^4.11.0",
+    "mongodb": "^3.6.4",
+    "mongoose": "^5.11.18"
   }
 }
