--- a/packages/jukboks-frontend/package.json
+++ b/packages/jukboks-frontend/package.json
@@ -2,9 +2,9 @@
   "name": "@kekasquad/jukboks-frontend",
   "version": "0.0.1",
   "devDependencies": {
-    "@tsconfig/svelte": "^1.0.10",
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.2",
+    "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.3.8",
     "prettier": "2.2.1",
     "prettier-plugin-svelte": "^2.1.6",
@@ -12,14 +12,13 @@
     "svelte-check": "^1.1.35",
     "svelte-loader": "^3.0.0",
     "svelte-preprocess": "^4.6.9",
-    "ts-loader": "^8.0.17",
-    "typescript": "^4.1.5",
     "webpack": "^5.23.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack",
-    "dev": "webpack serve --content-base public"
+    "dev": "webpack serve --content-base public",
+    "check": "svelte-check"
   }
 }
