--- a/packages/jukboks-backend/package.json
+++ b/packages/jukboks-backend/package.json
@@ -6,16 +6,18 @@
     "dev": "nodemon src/app.js"
   },
   "devDependencies": {
+    "@types/node": "^14.14.35",
     "eslint": "^7.20.0",
     "eslint-config-prettier": "^8.0.0",
     "eslint-plugin-prettier": "^3.3.1",
     "nodemon": "^2.0.7",
+    "pino-pretty": "^4.7.1",
     "prettier": "^2.2.1"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "express-openapi-validator": "^4.11.0",
-    "mongodb": "^3.6.4",
-    "mongoose": "^5.11.18"
+    "fastify": "^3.14.0",
+    "fastify-plugin": "^3.0.0",
+    "fastify-swagger": "^4.4.1",
+    "mongoose": "^5.12.0"
   }
 }
