--- a/packages/jukboks-backend/package.json
+++ b/packages/jukboks-backend/package.json
@@ -18,6 +18,7 @@
     "fastify": "^3.14.0",
     "fastify-plugin": "^3.0.0",
     "fastify-swagger": "^4.4.1",
-    "mongoose": "^5.12.0"
+    "mongoose": "^5.12.0",
+    "ws": "^7.4.4"
   }
 }
