--- a/packages/jukboks-backend/package.json
+++ b/packages/jukboks-backend/package.json
@@ -16,7 +16,9 @@
   },
   "dependencies": {
     "fastify": "^3.14.0",
+    "fastify-jwt": "^2.4.0",
     "fastify-plugin": "^3.0.0",
+    "fastify-sensible": "^3.1.1",
     "fastify-swagger": "^4.4.1",
     "mongoose": "^5.12.0",
     "ws": "^7.4.4"
