--- a/packages/jukboks-backend/package.json
+++ b/packages/jukboks-backend/package.json
@@ -16,6 +16,7 @@
     "prettier": "^2.2.1"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^8.2.0",
     "fastify": "^3.14.0",
     "fastify-jwt": "^2.4.0",
