--- a/packages/jukboks-backend/package.json
+++ b/packages/jukboks-backend/package.json
@@ -24,6 +24,7 @@
     "fastify-sensible": "^3.1.1",
     "fastify-swagger": "^4.4.1",
     "mongoose": "^5.12.0",
+    "nanoid": "^3.1.22",
     "ws": "^7.4.4"
   }
 }
