--- a/packages/jukboks-frontend/package.json
+++ b/packages/jukboks-frontend/package.json
@@ -12,6 +12,7 @@
     "svelte-check": "^1.1.35",
     "svelte-loader": "^3.0.0",
     "svelte-preprocess": "^4.6.9",
+    "svelte-routing": "^1.5.0",
     "webpack": "^5.23.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
