--- a/packages/jukboks-backend/package.json
+++ b/packages/jukboks-backend/package.json
@@ -25,6 +25,11 @@
     "fastify-swagger": "^4.4.1",
     "mongoose": "^5.12.0",
     "nanoid": "^3.1.22",
+    "socket.io": "^4.0.0",
     "ws": "^7.4.4"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.3",
+    "utf-8-validate": "^5.0.4"
   }
 }
