--- a/packages/jukboks-backend/package.json
+++ b/packages/jukboks-backend/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "dotenv": "^8.2.0",
+    "emittery": "^0.8.1",
     "fastify": "^3.14.0",
     "fastify-jwt": "^2.4.0",
     "fastify-plugin": "^3.0.0",
