--- a/packages/jukboks-backend/package.json
+++ b/packages/jukboks-backend/package.json
@@ -13,7 +13,8 @@
     "eslint-plugin-prettier": "^3.3.1",
     "nodemon": "^2.0.7",
     "pino-pretty": "^4.7.1",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "socket.io-client": "^4.0.1"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
