--- a/packages/jukboks-backend/package.json
+++ b/packages/jukboks-backend/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cheerio": "^1.0.0-rc.5",
     "dotenv": "^8.2.0",
     "emittery": "^0.8.1",
     "fastify": "^3.14.0",
@@ -25,6 +26,7 @@
     "fastify-plugin": "^3.0.0",
     "fastify-sensible": "^3.1.1",
     "fastify-swagger": "^4.4.1",
+    "got": "^9.6.0",
     "mongoose": "^5.12.0",
     "nanoid": "^3.1.22",
     "socket.io": "^4.0.0",
