--- a/packages/jukboks-backend/package.json
+++ b/packages/jukboks-backend/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^8.2.0",
     "emittery": "^0.8.1",
     "fastify": "^3.14.0",
+    "fastify-cors": "^5.2.0",
     "fastify-jwt": "^2.4.0",
     "fastify-plugin": "^3.0.0",
     "fastify-sensible": "^3.1.1",
