--- a/packages/jukboks-backend/package.json
+++ b/packages/jukboks-backend/package.json
@@ -23,6 +23,7 @@
     "emittery": "^0.8.1",
     "fastify": "^3.14.0",
     "fastify-cors": "^5.2.0",
+    "fastify-helmet": "^5.3.1",
     "fastify-jwt": "^2.4.0",
     "fastify-plugin": "^3.0.0",
     "fastify-sensible": "^3.1.1",
