--- a/packages/jukboks-frontend/package.json
+++ b/packages/jukboks-frontend/package.json
@@ -11,6 +11,7 @@
     "svelte": "^3.32.3",
     "svelte-check": "^1.1.35",
     "svelte-loader": "^3.0.0",
+    "svelte-loading-spinners": "^0.1.4",
     "svelte-navigator": "^3.1.5",
     "svelte-preprocess": "^4.6.9",
     "webpack": "^5.23.0",
