--- a/packages/jukboks-frontend/package.json
+++ b/packages/jukboks-frontend/package.json
@@ -4,6 +4,10 @@
   "devDependencies": {
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.2",
+    "eslint": "^7.20.0",
+    "eslint-config-prettier": "^8.0.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-svelte3": "^3.1.2",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.3.8",
     "prettier": "2.2.1",
@@ -21,6 +25,7 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack",
     "dev": "webpack serve --content-base public",
-    "check": "svelte-check"
+    "check": "svelte-check",
+    "lint": "prettier -w . && eslint --fix ."
   }
 }
