--- a/packages/jukboks-backend/package.json
+++ b/packages/jukboks-backend/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon src/app.js",
-    "lint": "eslint --fix ."
+    "lint": "prettier -w . && eslint --fix ."
   },
   "devDependencies": {
     "@types/node": "^14.14.35",
@@ -29,6 +29,7 @@
     "fastify-sensible": "^3.1.1",
     "fastify-swagger": "^4.4.1",
     "got": "^11.8.2",
+    "iso8601-duration": "^1.3.0",
     "mongoose": "^5.12.0",
     "nanoid": "^3.1.22",
     "socket.io": "^4.0.0",
