--- a/packages/jukboks-frontend/package.json
+++ b/packages/jukboks-frontend/package.json
@@ -13,6 +13,7 @@
     "mini-css-extract-plugin": "^1.3.8",
     "prettier": "2.2.1",
     "prettier-plugin-svelte": "^2.1.6",
+    "socket.io-client": "^4.0.1",
     "svelte": "^3.32.3",
     "svelte-calendar": "^2.0.4",
     "svelte-check": "^1.1.35",
