--- a/packages/jukboks-frontend/package.json
+++ b/packages/jukboks-frontend/package.json
@@ -21,6 +21,7 @@
     "svelte-loading-spinners": "^0.1.4",
     "svelte-navigator": "^3.1.5",
     "svelte-preprocess": "^4.6.9",
+    "timepicker-ui": "^2.1.1",
     "webpack": "^5.23.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
