--- a/packages/jukboks-backend/package.json
+++ b/packages/jukboks-backend/package.json
@@ -32,6 +32,7 @@
     "iso8601-duration": "^1.3.0",
     "mongoose": "^5.12.0",
     "nanoid": "^3.1.22",
+    "simple-oauth2": "^4.2.0",
     "socket.io": "^4.0.0",
     "ws": "^7.4.4"
   },
