--- a/packages/jukboks-frontend/package.json
+++ b/packages/jukboks-frontend/package.json
@@ -2,6 +2,7 @@
   "name": "@kekasquad/jukboks-frontend",
   "version": "0.0.1",
   "devDependencies": {
+    "copy-webpack-plugin": "^9.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.2",
     "eslint": "^7.20.0",
